- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45 - DONE!!!
- Default gelatin nutrition turned from Protein back to Fruit - DONE!!!
- Carrot can be added to fruit bread/muffins, similar to pumpkin
- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- WHY ARE FRIED BALLS DOING IT TOO????
- Peanut butter fixed so it gives nutrients when in bowl/bucket
- NutritionProps removed from salad dressing - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?
- Items can go into crocks? New labels for everything?
- Fermented fish slop pile voxelized to resemble pickled soybean pile - DONE!!!
- Pickled cabbage transform reviewed


2.0.0-dev.5
REBALANCING:
- Chickens can eat eggshells again; eggshell and peanut skin requirements quadrupled for troughs

BUG FIXES:
- Fermented fish slop barrel textures fixed
- Whole pumpkins no longer usable for meals
- Porridge patch fixed so it cannot conflict with Wildcraft's nuts in porridge patch

MISC: 
- Eggshells can be turned into washed eggshells, which grind into lime at an 8:1 ratio 

2.0.0-dev.4
HANDBOOK THINGS:
- Meal names fixed in handbook 
- Recipe notes added to meals in the handbook
- Meal descriptions added