@@ -3867,6 +3867,9 @@
   "itemdesc-soyprep-cultured": "Seal in a barrel with 1 L of brine.",
   "item-soyprep-slurry": "Soybean slurry",
   "itemdesc-soyprep-slurry": "Squeeze in a fruit press to make soy sauce.",
+  "item-handbooktitle-soyprep": "Soy Sauce Preparation",
+  "item-handbooktext-soyprep": "Creating <a href=\"handbook://item-expandedfoods:soysauce\">soy sauce</a> is a multi-step process. First, soak soybeans in water for , whir.",
+
 
   "item-foodoilportion-soy": "Soybean oil portion",
 
@@ -5545,7 +5548,7 @@
   "item-acornstuffedpepper-syruppartbaked": "Deluxe stuffed acorn bell pepper (part-baked)",
   "item-acornstuffedpepper-syrupcooked": "Deluxe stuffed acorn bell pepper",
   "item-acornstuffedpepper-syrupcharred": "Deluxe stuffed acorn bell pepper (charred)",
-  "item-acornstuffedpepper-oiled": "Oiled stuffedascorn bell pepper",
+  "item-acornstuffedpepper-oiled": "Oiled stuffed acorn bell pepper",
 
   "item-peanut-cooked": "Cooked peanuts",
   "item-peanut-skins": "Peanut skins",
@@ -5566,8 +5569,11 @@
   "recipeingredient-item-peanut-kernels-insturmentalcase": "peanut kernels",
   "game:meal-ingredient-stew-primary-peanut-kernels": "peanut kernels",
   "game:meal-ingredient-stew-secondary-peanut-kernels": "peanut kernels",
+  "item-handbooktitle-peanut": "Roasting Peanuts",
+  "item-handbooktext-peanut": "By roasting peanuts in an oven, their nutty flavor is enhanced and the skins become easier to remove. The roasted kernels are delicious and can be ground into very useful <a href=\"handbook://item-expandedfoods:peanutliquid-paste\">peanut paste</a>, while the leftover skins can be used as animal feed or fertilizer.",
 
-    "itemdesc-peanut-skins": "Decent animal feed.",
+
+  "itemdesc-peanut-skins": "Decent animal feed.",
 
   "item-peanutliquid-paste": "Peanut paste",
   "item-peanutliquid-butter": "Peanut butter",
