@@ -102,6 +102,8 @@ REBALANCING:
 - Default gelatin nutrition turned from Protein back to Fruit - DONE!!!
 - Carrot can be added to fruit bread/muffins, similar to pumpkin
 - Cottage cheese patch adding "nutritionPropsWhenInMeal" removed - DONE!!!
+- All sauces are not drinkable; for food use only
+- Soy sauce requires 7 days in barrel, down from 14 - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
@@ -123,6 +125,7 @@ MISC:
 - Soybean textures/shapes updated
 - Primitive survival patches reviewed
 - FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
+- WHYYYYY IS SALAD DRESSING NOT WORKING IN MEALS??????????????????????
 - use the new 'NutritionPropertiesPerLitreInMeal' stuff
 - Healing over time implemented for all items
 - Soulstorm Brew makes you psychedelic now?
